# On-The-Go-Pharmacy-Projet

./: CMakeLists.txt  Dockerfile  ci.compose.yaml  ci.dockerfile
resources/: config.json
sql/: 001_init.sql  airbnb.sql
src/: App.cpp  ServiceComponent.hpp  SwaggerComponent.hpp
src/classes/: 1.cpp  2.cpp  Admin.cpp  Category.cpp  Prescription.cpp  Product.cpp  Shopping_cart.cpp  Stock.cpp  User.cpp
src/controller/: CategoryController.h  ProductConctroller.h  UsersController.h
src/db/: UserDb.hpp
src/dto/: CategoryDto.h  DescriptionDto.h  PageDto.hpp  PrescriptionDto.h  ProductDto.h  UsersDto.h
src/headers/: Admin.h  Category.h  Prescription.h  Product.h  Shopping_cart.h  Stock.h  User.h
src/service/: CategoryService.cpp  CategoryService.h  PrescriptionService.cpp  PrescriptionService.h  ProductService.cpp  ProductService.h  UsersService.cpp  UsersService.h
utility/: install-oatpp-modules.sh
